2008-11-26 Jim Garlick <garlick@llnl.gov>

	* src/Makefile.am : Install pkg-config file and header.

	* config/ac_pkgconfig.m4 : New [Arnaud Quette]

	* src/libpowreman.pc.in : New [Arnaud Quette]

	* configure.ac : Add support for above.

2008-11-25 Jim Garlick <garlick@llnl.gov>

	* : Add some missing copyright headers.

	* src/libpowerman.[ch] : Some refactoring and cleanup.

2008-11-20 Jim Garlick <garlick@llnl.gov>

	* : Audit for debian [Arnaud Quette]
	- rename bootstrap to autoreconf (convention)
	- remove htdocs/powerman47.jpg (redistribution rights)
	- fix AUTHORS typo
	- remove comments from man pages
	- add man pages for httppower, plmpower
	- make pm man page an alias for powerman man page

2008-11-16 Jim Garlick <garlick@llnl.gov>

	* src/libpowerman.[ch] : New.

	* bootstrap, autoconf.ac, src/Makefile.am : Add infrastructure
	for libtoolized powerman library.

2008-11-12 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.3

	* etc/powerman.conf.example : Renamed from powerman.conf.

2008-11-11 Jim Garlick <garlick@llnl.gov>

	* parse_util.c : Declare config invalid if no nodes are defined.

	* etc/ibmh8.dev : Removed.

008-11-07 Jim Garlick <garlick@llnl.gov>

	* src/parse_tab.y : Relax order of types of config entries.

	* etc/powerman.conf : Config file example.

2008-11-06 Jim Garlick <garlick@llnl.gov>

	* scripts/powerman.init.in : Replace old powerman.init
	with Chris Dunlap's portable init script (lifted fron ConMan).

	* powerman.spec : Make crufty %post, %preun, %postun scripts
	look more like ConMan's.

2008-11-05 Jim Garlick <garlick@llnl.gov>

	* scripts/Makefile.am : Fix a typo in install command
	line that broke on Solaris.

2008-11-04 Jim Garlick <garlick@llnl.gov>

	* src/device.c : Fix memory leak [Scott Burns].

	* etc/cyclades-pm20.dev : New [Scott Burns].

	* etc/cyclades-pm[8,10,42].dev : Added temp script [Scott Burns].

	* test/t46, test/cyclades.c : Added PM20.

2008-11-03 Jim Garlick <garlick@llnl.gov>
