@@ -9,6 +9,11 @@ install-data-local:
 		$(DESTDIR)$(sysconfdir)/init.d
 	$(top_srcdir)/config/install-sh -m 755 $(srcdir)/powerman.init \
 		$(DESTDIR)$(sysconfdir)/init.d/powerman
+	-$(top_srcdir)/config/install-sh -m 755 -d \
+		$(DESTDIR)$(localstatedir)/run
+	-$(top_srcdir)/config/install-sh -o $(RUN_AS_USER) -m 755 -d \
+		$(DESTDIR)$(localstatedir)/run/powerman
+
 
 uninstall-local:
 	$(RM) $(DESTDIR)$(sysconfdir)/init.d/powerman
