@@ -34,9 +34,9 @@ DESC="PowerMan"
 DAEMON="$sbindir/powermand"
 #DAEMON_ARGS=
 #CONFIG=
-#PIDFILE=
+PIDFILE="$localstatedir/run/powerman/powermand.pid"
 #NICE=
-#USER=
+USER=@RUN_AS_USER@
 #SIGHUP_RELOAD=
 
 ###############################################################################
