@@ -53,7 +53,7 @@ static int in_fdlist(int fd, int *fds, int len)
 }
 
 /* Review: if NDEBUG turn off core generation */
-void daemon_init(int *skipfds, int skipfdslen, char *rootdir, char *name)
+void daemon_init(int *skipfds, int skipfdslen, char *name)
 {
     int i;
 
@@ -82,13 +82,6 @@ void daemon_init(int *skipfds, int skipfdslen, char *rootdir, char *name)
             exit(0);
     }
     /* 2nd child continues */
-
-    /* change working directory */
-    if (chdir(rootdir) < 0)
-        if (mkdir(rootdir, 0755) < 0)
-            err_exit(TRUE, "mkdir %s", rootdir);
-    if (chdir(rootdir) < 0) 
-        err_exit(TRUE, "chdir %s", rootdir);
 
     /* clear our file mode creation mask */
     umask(0);
