@@ -1,3 +1,3 @@
 include "../etc/powerman.dev"
-device "p0" "powerman" "../src/powermand -f -c test4.conf -s -R |&"
+device "p0" "powerman" "../src/powermand -f -c test4.conf -s |&"
 node "t[0-63]"   "p0"
