@@ -1,4 +1,4 @@
 include "../etc/powerman.dev"
-device "p0" "powerman" "../src/powermand -f -c test4.conf -s -R |&"
+device "p0" "powerman" "../src/powermand -f -c test4.conf -s |&"
 node "x[0-15]" "p0" "t[0-15]"
 node "x[16-31]" "p0" "t[32-47]"
