@@ -2,7 +2,7 @@
 TEST=t48
 ./vpcd -p 10102 &
 sleep 1
-$PATH_POWERMAND -c $TEST.conf -f -R -1 2>/dev/null&  
+$PATH_POWERMAND -c $TEST.conf -f -1 2>/dev/null&  
 sleep 1
 $PATH_POWERMAN -h localhost:10103 \
     -q -Q t1 -Q t[3-5] >$TEST.out 2>$TEST.err
